--- a/components/Footer/styles.module.css
+++ b/components/Footer/styles.module.css
@@ -1,6 +1,6 @@
 .footer{
     width: 100%;
-    height: 25px;
+    height: 25%;
     border: 1px solid rgb(255, 94, 0);
     background-color: rgb(235, 209, 162);
     color: rgb(255, 94, 0);
